--- a/react_portfolio/src/App.css
+++ b/react_portfolio/src/App.css
@@ -14,7 +14,12 @@ header {
   top: 0;
   width: 100%;
   height: 130px;
-  background-color: blueviolet;
+  background-color: black;
+  background-image: url('./assets/img/abstractpic.jpg');
+  background-position: center;
+  background-size: contain;
+  background-repeat: none;
+
 }
 
 /* my name in the top left of pg */
@@ -28,18 +33,26 @@ header {
 
 /* positioning of navbar */
 .navbar {
-  width: 50%;
+  width: 100%;
   margin-left: 50%;
+  margin-right: 20%;
   margin-top: -30px;
   margin-bottom: 50px;
 }
 
 /* styling of links in navbar */
 .navlinks {
+  color: white;
   text-decoration: none;
   display: inline;
-  padding-right: 65px;
+  padding-left: 35px;
+  padding-right: 35px;
   font-size: 20px;
+  font-weight: bold;
+}
+
+.navlinks:hover {
+  cursor: pointer;
 }
 
 .footer {
@@ -92,6 +105,11 @@ footer li a:hover {
   width: 88%;
   margin-left: 6%;
   margin-right: 6%;
+  color: white;
+  border: 1px solid blueviolet;
+  border-radius: 10px 10px;
+  padding: 15px 15px;
+  background-color: rgb(178, 124, 229);
 }
 
 /* beginning of css for contact pg */
