modified app.css about and portfolio index.jsx

--- a/react_portfolio/src/App.css
+++ b/react_portfolio/src/App.css
@@ -101,7 +101,7 @@ footer li a:hover {
 
 /* about me paragraph */
 .aboutparagraph {
-  width: 88%;
+  width: 50%;
   margin-left: 6%;
   margin-right: 6%;
   color: white;
@@ -109,6 +109,10 @@ footer li a:hover {
   border-radius: 10px 10px;
   padding: 15px 15px;
   background-color: #e71335;
+}
+
+.macbookimg {
+  background-image: url('./assets/img/macbook.png');
 }
 
 /* beginning of css for contact pg */
