--- a/react_portfolio/src/App.css
+++ b/react_portfolio/src/App.css
@@ -4,6 +4,10 @@
 }
 
 body {
+  background-image: url('./assets/img/macbook.png');
+  background-position: fixed;
+  background-size: 500px 250px;
+  background-repeat: no-repeat;
   background-color: black;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
@@ -55,7 +59,7 @@ header {
   cursor: pointer;
 }
 
-.footer {
+footer {
   position: fixed;
   text-align: center;
   bottom: 0;
@@ -111,15 +115,13 @@ footer li a:hover {
   background-color: #e71335;
 }
 
-.macbook-img {
-  margin-top: -200px;
-  margin-left: 65%;
-}
-
-.macbookimg {
+/* .macbookimg {
   width: 500px;
   height: 250px;
-}
+  margin-top: -140px;
+  margin-left: 65%;
+  position: fixed;
+} */
 
 /* beginning of css for contact pg */
 /* card with contact form */
