--- a/react_portfolio/src/App.css
+++ b/react_portfolio/src/App.css
@@ -9,6 +9,8 @@ body {
   background-size: 500px 250px;
   background-repeat: no-repeat;
   background-color: black;
+  background-position: bottom;
+  background-position-x: right;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
