modified app.css, and headernav index.jsx

--- a/react_portfolio/src/App.css
+++ b/react_portfolio/src/App.css
@@ -107,7 +107,10 @@ header {
   font-weight: bold;
 }
 
+.active,
 .navlinks:hover {
+  color: #e71335;
+  font-weight: bold;
   cursor: pointer;
 }
 
