modified app.css, public/index.html added font, footer index.jsx added copyright, modified app.css

--- a/react_portfolio/src/App.css
+++ b/react_portfolio/src/App.css
@@ -15,7 +15,6 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-
 .homepgcontainer {
   box-sizing: border-box;
 }
@@ -76,12 +75,12 @@ header {
 
 /* position my name in the top left of pg */
 .nameheader {
-  font-family: 'Suez One', serif;
+  font-family: 'Permanent Marker', cursive;
   width: 40%;
   text-align: left;
-  padding-top: 45px;
+  padding-top: 34px;
   padding-left: 30px;
-  font-size: 34px;
+  font-size: 40px;
   background: linear-gradient(to right, #d70a0a 0%, #e2f208 80%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -95,7 +94,7 @@ header {
 /* positioning of navbar */
 .navbar {
   width: 100%;
-  margin-left: 48%;
+  margin-left: 55%;
   margin-right: 20%;
   margin-top: -30px;
   margin-bottom: 50px;
@@ -108,16 +107,17 @@ header {
 }
 
 .navlink {
-  color: white;
+  font-family: 'Permanent Marker', cursive;
+  color: #e71335;
   text-decoration: none;
-  padding-left: 35px;
-  padding-right: 35px;
-  font-size: 20px;
-  font-weight: bold;
+  margin-left: 15px;
+  margin-right: 15px;
+  font-size: 26px;
+  /* font-weight: bold; */
 }
 
 .navlink:hover {
-  color: #e71335;
+  color: gold;
   font-weight: bold;
   cursor: pointer;
 }
@@ -204,13 +204,18 @@ footer li a:hover {
   }
 }
 
+.copyright {
+  font-size: 12px;
+  padding-top: 3px;
+}
+
 /* pg titles for about, contact, portfolio, and resume */
 .aboutpgtitle,
 .contactpgtitle,
 .portfoliopgtitle,
 .resumepgtitle {
-  font-family: 'Suez One', serif;
-  font-size: 28px;
+  font-family: 'Permanent Marker', cursive;
+  font-size: 32px;
   color: #e71335;
   margin-top: 13%;
   margin-left: 6%;
