--- a/react_portfolio/src/App.css
+++ b/react_portfolio/src/App.css
@@ -76,12 +76,10 @@ header {
 /* position my name in the top left of pg */
 .nameheader {
   font-family: 'Permanent Marker', cursive;
-  width: 35%;
-  text-align: left;
-  padding-top: 32px;
-  padding-left: 30px;
+  width: 45%;
+  margin-left: 30px;
   font-size: 45px;
-  background: linear-gradient(to right, #d70a0a 0%, #e2f208 80%);
+  background: linear-gradient(to right, #d70a0a 0%, #e2f208 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -94,24 +92,27 @@ header {
 /* positioning of navbar */
 .navbar {
   width: 100%;
-  margin-left: 50%;
+  margin-top: 32px;
+  margin-left: 20px;
   margin-right: 20px;
-  margin-top: -45px;
   margin-bottom: 50px;
+}
+
+.navbar ul {
+  width: 55%;
+  margin-left: 50%;
+  margin-top: -45px;
 }
 
 /* styling of links in navbar */
 .navlink {
   display: inline;
   list-style: none;
-}
-
-.navlink {
   font-family: 'Permanent Marker', cursive;
   color: #e71335;
   text-decoration: none;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 7px;
+  margin-right: 7px;
   font-size: 26px;
 }
 
@@ -120,6 +121,8 @@ header {
   color: gold;
   font-weight: bold;
   cursor: pointer;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: #e71335;
 }
 
 footer {
@@ -218,7 +221,9 @@ footer li a:hover {
   font-family: 'Permanent Marker', cursive;
   font-size: 32px;
   color: #e71335;
-  margin-top: 13%;
+  /* -webkit-text-stroke-width: 1px; */
+  /* -webkit-text-stroke-color: gold; */
+  margin-top: 12%;
   margin-left: 6%;
 }
 
@@ -364,7 +369,7 @@ footer li a:hover {
   text-align: center;
 }
 
-/* project title in portfolio pg */
+/* project title/deployed link in portfolio pg */
 .deployedprojectlink {
   color: gold;
   text-decoration: none;
@@ -373,6 +378,7 @@ footer li a:hover {
   font-size: 28px;
 }
 
+/* link to deployed link hover effect */
 .deployedprojectlink:hover {
   color: #e71335;
 }
@@ -407,6 +413,7 @@ footer li a:hover {
   text-decoration: none;
 }
 
+/* link to download resume hover effect */
 .resumelink:hover {
   color: #e71335;
 }
@@ -419,10 +426,12 @@ footer li a:hover {
   color: #e71335;
 }
 
+/* list with front end proficiencies */
 .front-end {
   width: 25%;
 }
 
+/* list with back end proficiencies */
 .back-end {
   width: 25%;
   margin-left: 28%;
@@ -443,4 +452,42 @@ footer li a:hover {
   display: inline-block;
   width: 1em;
   margin-left: -1em;
+}
+
+@media screen and (max-width: 1200px) {
+
+  .navbar ul {
+    margin-left: 45%;
+  }
+}
+
+
+@media screen and (max-width: 1050px) {
+
+  .nameheader {
+    margin-top: -15px;
+    margin-bottom: 12px;
+    width: 60%;
+  }
+
+  .navbar {
+    width: 100%;
+    margin-top: 32px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-bottom: 50px;
+  }
+
+  .navbar ul {
+    width: 100%;
+    margin-top: -20px;
+    margin-left: 1.5%;
+  }
+
+  .aboutpgtitle,
+  .contactpgtitle,
+  .portfoliopgtitle,
+  .resumepgtitle {
+    margin-top: 16%;
+  }
 }
