--- a/react_portfolio/src/App.css
+++ b/react_portfolio/src/App.css
@@ -9,7 +9,7 @@ body {
   background-size: 500px 250px;
   background-repeat: no-repeat;
   background-color: black;
-  background-position: bottom;
+  background-position: 0 bottom;
   background-position-x: right;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
@@ -244,20 +244,20 @@ footer li a:hover {
   margin-left: 6%;
   margin-right: 6%;
   color: white;
-  margin-bottom: 35px;
+  margin-bottom: 135px;
   border-radius: 10px 10px;
   padding: 15px 15px;
   font-size: 15px;
   background-color: #e71335;
 }
 
-.macbookimg {
+/* .macbookimg {
   width: 500px;
   height: 250px;
   margin-top: -140px;
   margin-left: 65%;
   position: fixed;
-}
+} */
 
 /* beginning of css for contact pg */
 /* container with contact form */
@@ -265,7 +265,7 @@ footer li a:hover {
   margin-left: 6%;
   width: 40%;
   margin-top: 10px;
-  margin-bottom: 100px;
+  margin-bottom: 140px;
 }
 
 /* title for input info on contact pg */
