--- a/react_portfolio/src/App.css
+++ b/react_portfolio/src/App.css
@@ -66,6 +66,7 @@ header {
   top: 0;
   width: 100%;
   height: 130px;
+  z-index: 100;
   background-color: black;
   background-image: url('./assets/img/abstractpic.jpg');
   background-position: center;
@@ -377,6 +378,8 @@ footer li a:hover {
 /* gh repo and deployed link  */
 .projectlinks {
   text-align: center;
+  z-index: 100;
+
 }
 
 /* project title/deployed link in portfolio pg */
